# fractals

./: Cargo.toml  README.md
src/: editor.rs  export.rs  gl.rs  main.rs  math.rs  plane.rs
src/info/: higher-exponents.txt  iterative-fractal.txt  julia-sets.txt  mandelbrot-set.txt  phoenix-fractals.txt
src/shaders/: fractal.frag  fractal.vert
