[package]
name = "fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.23.0"
eframe = "0.32.0"
futures-lite = "2.6.0"
num-complex = "0.4.6"
num-integer = "0.1.46"
png = "0.17.16"
rayon = "1.10.0"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
