[package]
name = "fractals"
version = "1.0.0"
edition = "2021"

[dependencies]
bytemuck = "1.23.0"
eframe = "0.32.0"
egui = { version = "0.32.0", features = ["bytemuck"] }
glow = "0.16.0"
num-complex = "0.4.6"
png = "0.17.16"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
